force-app/main/default/objects/IOM_Document_Details__c/IOM_Document_Details__c.object-meta.xml
<CustomObject>
    <description>Object to store IOM Invoice/Credit Note Document Number and  ERP Reference Number in CRM so that reporting and search on ERP Reference Number field can be done in CRM.</description>
    <label>IOM Document Details</label>
    <nameField>
        <displayFormat>DD-{00000}</displayFormat>
        <label>Document Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOM Document Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>