force-app/main/default/objects/IOM_Document_Details__c/fields/CRM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CRM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup up to Opportunity in the CRM.</description>
    <label>CRM Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>IOM Document Details</relationshipLabel>
    <relationshipName>IOM_Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>