force-app/main/default/objects/IOM_Document_Details__c/fields/ERP_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Reference_Number__c</fullName>
    <description>IOM Invoice/Credit Note ERP Reference Number</description>
    <label>ERP Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>