force-app/main/default/objects/IOM_Document_Details__c/fields/IOM_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>IOM_Document_Number__c</fullName>
    <description>IOM Invoice/Credit Note Document Number</description>
    <label>IOM Document Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>