force-app/main/default/objects/IOM_Document_Details__c/fields/IOM_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity_No__c</fullName>
    <description>IOM Opportunity No.</description>
    <formula>HYPERLINK( $CustomMetadata.IOM_Global_Configuration_Data__mdt.IOM_Lightning_Redirect_URL.IOM_Value__c+&apos;/apex/&apos;+$CustomMetadata.IOM_Global_Configuration_Data__mdt.IOM_View_Opportunity_VF.IOM_Value__c+&apos;?iomoppno=&apos;+ CRM_Opportunity__r.IOM_Opportunity_No__c, CRM_Opportunity__r.IOM_Opportunity_No__c,&apos;_blank&apos;)</formula>
    <label>IOM Opportunity No</label>
    <type>Text</type>
</CustomField>